# doctors-office-appointment-planning

./: .gitignore
backend/praxis-terminplaner/: Cargo.toml
backend/praxis-terminplaner/authentication/: Cargo.toml
backend/praxis-terminplaner/authentication/src/: errors.rs  lib.rs
backend/praxis-terminplaner/business/: Cargo.toml
backend/praxis-terminplaner/business/src/: appointment.rs  appointment_type.rs  base.rs  doctor.rs  doctor_appointment_type.rs  lib.rs  person.rs  room.rs  room_appointment_type.rs  search.rs  user.rs
backend/praxis-terminplaner/database/src/scripts/: structure.sql
backend/praxis-terminplaner/datalayer/: Cargo.toml
backend/praxis-terminplaner/datalayer/src/: appointment.rs  appointment_type.rs  base.rs  doctor.rs  doctor_appointment_type.rs  error.rs  lib.rs  patient.rs  person.rs  room.rs  room_appointment_type.rs  sea.rs  search.rs  user.rs
backend/praxis-terminplaner/datalayer/src/prefetch/: doctor.rs  mod.rs
backend/praxis-terminplaner/entities/: .env  Cargo.toml
backend/praxis-terminplaner/entities/migrations/2023-11-15-185453_init/: down.sql  up.sql
backend/praxis-terminplaner/entities/src/: appointment.rs  appointment_type.rs  base.rs  doctor.rs  doctor_appointment_type.rs  lib.rs  mod.rs  patient.rs  permission.rs  person.rs  prelude.rs  role.rs  role_permission.rs  room.rs  room_appointment_type.rs  schema.rs  user.rs  user_permission.rs
backend/praxis-terminplaner/main/: Cargo.toml
backend/praxis-terminplaner/main/src/: main.rs  response_models.rs
backend/praxis-terminplaner/main/src/request_guards/: authentication.rs  mod.rs
backend/praxis-terminplaner/main/src/routes/: appointment.rs  appointment_type.rs  auth.rs  doctor.rs  doctor_appointment_type.rs  mod.rs  room.rs  room_appointment_type.rs  search.rs  user.rs
backend/praxis-terminplaner/models/: Cargo.toml
backend/praxis-terminplaner/models/src/: appointment.rs  appointment_type.rs  available_appointment_resources.rs  doctor.rs  doctor_appointment_type.rs  lib.rs  patient.rs  person.rs  room.rs  room_appointment_type.rs  user.rs
backend/praxis-terminplaner/tools/: Cargo.toml
frontend/praxis-terminplaner-ui/: README.md  angular.json  package-lock.json  package.json
frontend/praxis-terminplaner-ui/src/: index.html  main.ts  styles.css
frontend/praxis-terminplaner-ui/src/app/: app.component.css  app.component.spec.ts  app.component.ts  app.module.ts
frontend/praxis-terminplaner-ui/src/app/components/appointment-planning/: appointment-planning.component.css  appointment-planning.component.html  (+2 more)
frontend/praxis-terminplaner-ui/src/app/models/: appointment-model.ts  appointment-type-model.ts  available-appointment-ressources-model.ts  base-model.ts  doctor-appointment-type-model.ts  doctor-model.ts  person-model.ts  room-appointment-type-model.ts  room-model.ts  search-definition-model.ts  token.ts  toolbar-button.ts  user-model.ts  user.ts
frontend/praxis-terminplaner-ui/src/app/modules/: search-layout.module.ts
frontend/praxis-terminplaner-ui/src/app/services/: api.service.ts  appointment-type.service.ts  appointment.service.ts  doctor-appointment-type.service.ts  doctor.service.ts  list.service.ts  model.service.ts  room-appointment-type.service.ts  room.service.ts  search.service.ts  toolbar.service.ts  user.service.ts
(+34 files in other folders)
