[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datalayer = {path = "../datalayer" }
bcrypt = { version = "0.15.0" }
jsonwebtoken = { version = "9.1.0" }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"