[package]
name = "business"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datalayer = { path = "../datalayer" }
entities = {path = "../entities" }
authentication = {path ="../authentication" }
models = { path = "../models"}
chrono = { version = "0.4.31", features=["serde"] }
futures = "0.3"
async-trait = "0.1.74"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]