[package]
name = "datalayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0.12.0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
entities = { path = "../entities" }
models = {path = "../models"}
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1.74"
tokio = "1.0"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]