[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
authentication = { path = "../authentication" }
models = { path = "../models" }
entities = { path= "../entities" }
business = { path = "../business" }
datalayer = { path = "../datalayer" }
session = { path = "../session" }
chrono = { version = "0.4.31", features=["serde"] }

rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
paste = "1.0.14"

